--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,8 +1,8 @@
 #Build Number for ANT. Do not edit!
-#Mon Dec 07 00:08:19 EST 2009
-build.time=2009.12.07 00\:08\:19 EST
-build.number=886
+#Mon Dec 21 12:15:55 EST 2009
+build.time=2009.12.21 12\:15\:55 EST
+build.number=888
 build.user=J
-pwm.version=1.4.3
+pwm.version=1.4.3 (beta)
 build.java.vendor=Sun Microsystems Inc.
 build.java.version=1.6.0_16
