--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -505,13 +505,22 @@ DEFLT_challenge.allowDuplicateResponses=false
 DESCR_challenge.allowDuplicateResponses=Control if each response is required to be unique
 
 LABEL_challenge.applyWorldlist=Apply Wordlist
-DEFLT_challenge.applyWorldlist=true
+DEFLT_challenge.applyWorldlist=false
 DESCR_challenge.applyWorldlist=Prevent commonly used words from being used as responses.  If true, and a wordlist is\
  configured, then users will not be able to use response values that are in the wordlist\
 
+LABEL_challenge.tokenAttribute=Token Attribute
+DEFLT_challenge.tokenAttribute=pwmForgottenToken
+DESCR_challenge.tokenAttribute=Attribute to store the forgotten password token that is used\
+  during email recovery.\
+
+LABEL_challenge.tokenMaxAge=Maximum Token Age
+DEFLT_challenge.tokenMaxAge=600
+DESCR_challenge.tokenMaxAge=Maximum age of the forgotten password email token.
+
 
 ##############################################################################################
-# Required Challange Questions.  Separate multiple questions with ";;;".
+# Required Challenge Questions.  Separate multiple questions with ";;;".
 #
 # The user is required to answer all required questions during both response setup and
 # password recovery
