--- a/pwm/servlet/web/WEB-INF/pwmServlet.properties
+++ b/pwm/servlet/web/WEB-INF/pwmServlet.properties
@@ -41,7 +41,6 @@ title=Password Self Service
 # For plain-text servers, use "ldap://serverame:389" format.
 # For SSL, use the "ldaps://servername:636" format.
 #
-#
 # Note also that for SSL, the JVM running PWM must trust the directory server,
 # either because it has a valid commercial (Verisign) cert, or because you have
 # manually added the public key certificate from the tree.  Alternatively,
@@ -52,6 +51,12 @@ title=Password Self Service
 # http://support.novell.com/cgi-bin/search/searchtid.cgi?/10072075.htm
 #############################################################################################
 ldapServerURLs=ldaps://172.17.2.91:636
+
+#############################################################################################
+# Indicates if PWM should trust any SSL certificate even if it is not listed
+# in the keystore.  This should never be enabled in production environment.
+#############################################################################################
+ldapPromiscuousSSL=true
 
 #############################################################################################
 # LDAP DN of user with rights to all users to be managed, in LDAP typeful syntax.
@@ -84,12 +89,6 @@ ldapProxyDN=cn=admin,o=system
 # The corresponding password of ldapProxyDN user.
 #############################################################################################
 ldapProxyPassword=n0v3ll
-
-#############################################################################################
-# Indicates if PWM should trust any SSL certificate even if it is not listed
-# in the keystore.  This should never be enabled in production environment.
-#############################################################################################
-ldapPromiscuousSSL=false
 
 #############################################################################################
 # Query string used to detect if a user is a pwmAdministrator.  An LDAP query is performed
@@ -590,10 +589,6 @@ intruder.address.maxAttempts=30
 #############################################################################################
 intruder.session.maxAttempts=5
 
-
-
-
-
 #*******************************************************************************************#
 #                                  Event Logging                                            #
 #*******************************************************************************************#
@@ -806,7 +801,7 @@ challenge.allowDuplicateResponses=false
 # Prevent commonly used words from being used as responses.  If true, and a wordlist is
 # configured, then users will not be able to use response values that are in the wordlist
 #############################################################################################
-challenge.applyWorldlist=true
+challenge.applyWorldlist=false
 
 
 #*******************************************************************************************#
