--- a/pwm/servlet/build.xml
+++ b/pwm/servlet/build.xml
@@ -19,10 +19,9 @@
   ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
   -->
 
-<project default="makeWAR">
+<project default="makeWAR" name="PWM Build Script">
     <target name="init">
         <property file="build.properties"/>
-
         <echo>PWM Build Script</echo>
         <echo> working directory: ${basedir}</echo>
         <echo> </echo>
