--- a/pwm/servlet/web/WEB-INF/web.xml
+++ b/pwm/servlet/web/WEB-INF/web.xml
@@ -130,15 +130,7 @@
     </filter>
     <filter-mapping>
         <filter-name>SessionFilter</filter-name>
-        <url-pattern>/private/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>SessionFilter</filter-name>
-        <url-pattern>/public/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>SessionFilter</filter-name>
-        <url-pattern>/admin/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
     <filter-mapping>
         <filter-name>CaptchaFilter</filter-name>
