--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -46,7 +46,7 @@ Button_Update=Update
 Button_Verify=Verify
 Button_UnlockPassword=Unlock Password
 Button_ConfirmResponses=Confirm Responses
-Button_ChangeResponses=Retype Responses
+Button_ChangeResponses=Go Back
 
 Title_Login=Please Log In
 Title_ChangePassword=Change Password
@@ -110,3 +110,4 @@ Display_Shortcuts=Select any of the following links to continue.
 Display_CommunicationError=Unable to communicate with server.  Continue when ready.
 Display_StrengthMeter=Password Strength
 Display_Captcha=Please enter the verification code below.  Typing in this code helps to protect your account from abuse.  
+Display_CapsLockIsOn=CAPS LOCK is on
