--- a/pwm/servlet/web/WEB-INF/pwmServlet.properties
+++ b/pwm/servlet/web/WEB-INF/pwmServlet.properties
@@ -506,7 +506,8 @@ password.SeedlistFile=seedlist.zip
 # PWM will periodically remove values older than the configured value here.  Value is
 # specified in seconds.  Default is 4 weeks (60s * 60m * 24h * 7d * 4w = 2419200)
 #############################################################################################
-password.sharedHistory.age=2419200
+#password.sharedHistory.age=2419200
+password.sharedHistory.age=30
 
 #############################################################################################
 # A list of values not allowed to be used as passwords (case insensitive).  This list
