--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -70,6 +70,7 @@ Title_Shortcuts=Shortcuts
 Title_PasswordWarning=Password Warning
 Title_Captcha=Verification
 Title_ConfirmResponses=Confirm Password Responses
+Title_UserInformation=User Information
 
 Display_Login=
 Display_PasswordExpired=Your password has expired.  You must set a new password now.
@@ -95,6 +96,7 @@ Display_ErrorBody=An error has occured. Please close your browser and try again 
 Display_UserEventHistory=This page shows your password event history. Only actions performed with PWM are shown here. All times listed are in the %1% timezone.
 Display_Logout=<b>You are now logged out.</b><p/>Please close all internet browser windows before you try to login again.  
 Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
+Display_PasswordNoExpire=Your password does not expire.
 Display_IdleTimeout=Idle Timeout:
 Display_Day=day
 Display_Days=days
