--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -199,9 +199,7 @@ DESCR_ldapServerURLs=List of ldap servers in URL format.  Comma separated.\
  either because it has a valid commercial certificate, or because you have\
  manually added the public key certificate from the tree to the java keystore.\
  <p/>\
- The following URL has an overview of the certificate export/import process:\
- <p/>\
- <a href="http://support.novell.com/cgi-bin/search/searchtid.cgi?/10072075.htm">http://support.novell.com/cgi-bin/search/searchtid.cgi?/10072075.htm</a>\
+ For Novell eDirectory, see Novell TID Document 10072075 for an overview of the certificate export/import process.
 
 LABEL_ldapProxyDN=LDAP Proxy User
 DEFLT_ldapProxyDN=cn=admin,o=system
