--- a/pwm/servlet/web/WEB-INF/pwmServlet.properties
+++ b/pwm/servlet/web/WEB-INF/pwmServlet.properties
@@ -46,9 +46,8 @@ title=Password Self Service
 # manually added the public key certificate from the tree.  Alternatively,
 # you can specify the ldapPromiscuusSSL setting.
 #
-# The following URL has an overview of the certificate export/import process:
-#
-# http://support.novell.com/cgi-bin/search/searchtid.cgi?/10072075.htm
+# For Novell eDirectory, see Novell TID Document 10072075 for an overview of the certificate
+# export/import process.
 #############################################################################################
 ldapServerURLs=ldaps://172.17.2.91:636
 
@@ -94,8 +93,10 @@ ldapProxyPassword=n0v3ll
 # Query string used to detect if a user is a pwmAdministrator.  An LDAP query is performed
 # during pwm login against the logged in user to determine if the user is a pwm Admin.  If
 # the user matches the query, then the user is considered a PWM administrator.
+#
+# Any attribute on the user entry is suitable for this check, including groupMembership.
 #############################################################################################
-pwmAdmin.queryMatch=(description=PWMADMIN)
+pwmAdmin.queryMatch=(groupMembership=cn=pwmAdmins,ou=groups,o=utopia)
 
 # If configured, this setting will add another field to the form-based PWM
 # login screen.  The field will allow the user to select a specific context
@@ -277,7 +278,7 @@ passwordSyncMaxWaitTime=90
 ldap.edirectory.enableNmas=true
 
 #############################################################################################
-# Always use proxy user account for ldap connections.  If true, PWM will only ever bind to
+# Always use proxy user account for ldap connections.  If true, PWM will only   ever bind to
 # the LDAP directory using the proxy username and password.  When set to true:
 #
 # - Authentication will be performed using ldap compare operation instead of bind
@@ -506,8 +507,7 @@ password.SeedlistFile=seedlist.zip
 # PWM will periodically remove values older than the configured value here.  Value is
 # specified in seconds.  Default is 4 weeks (60s * 60m * 24h * 7d * 4w = 2419200)
 #############################################################################################
-#password.sharedHistory.age=2419200
-password.sharedHistory.age=30
+password.sharedHistory.age=2419200
 
 #############################################################################################
 # A list of values not allowed to be used as passwords (case insensitive).  This list
@@ -682,13 +682,13 @@ challenge.allowSetup.queryMatch=(objectClass=*)
 #############################################################################################
 # If true, the user will be directed to configure challenge/response before loging out of PWM.
 # This accounts for new user creation and activation, and other scenarios.  The user is
-# forced check to see if eligable for allowSetup, and also if they do not have valid
+# forced check to see if eligible for allowSetup, and also if they do not have valid
 # responses already configured.
 #############################################################################################
 challenge.forceSetup=true
 
 ##############################################################################################
-# Required Challange Questions.  Separate multiple questions with ";;;".
+# Required Challenge Questions.  Separate multiple questions with ";;;".
 #
 # The user is required to answer all required questions during both response setup and
 # password recovery
@@ -700,7 +700,7 @@ challenge.requiredQuestions=What is your maiden name?:::5:::200;;;What is your f
 ##############################################################################################
 # Required ldap attributes for challenge/response.  These attributes will be required to
 # be supplied by the user as part of the forgotten password mechanism.   The proxy user
-# will require "compare" ldap rights to thse attributes.
+# will require "compare" ldap rights to these attributes.
 #
 # Localizable.
 #############################################################################################
