--- a/pwm/servlet/web/WEB-INF/pwmServlet.properties
+++ b/pwm/servlet/web/WEB-INF/pwmServlet.properties
@@ -269,8 +269,10 @@ passwordSyncMaxWaitTime=90
 # When connecting to a Novell eDirectory ldap directory, this parameter will control if PWM
 # will use NMAS extensions when connecting to the ldap directory.  Enabling nmas results in:
 #
-# * better error messages when using unversal password policies
+# * better error messages when using universal password policies
 # * better error handling during certain change password scenarios
+# * ability to read password during forgotten password recovery, preventing a random
+#   password from being temporarily set on the user
 #
 # Unless you are using an older version of eDirectory (pre 8.8 or before), it is generally
 # best to set this to true.
@@ -278,7 +280,7 @@ passwordSyncMaxWaitTime=90
 ldap.edirectory.enableNmas=true
 
 #############################################################################################
-# Always use proxy user account for ldap connections.  If true, PWM will only   ever bind to
+# Always use proxy user account for ldap connections.  If true, PWM will only bind to
 # the LDAP directory using the proxy username and password.  When set to true:
 #
 # - Authentication will be performed using ldap compare operation instead of bind
