--- a/pwm/servlet/web/WEB-INF/pwmServlet.properties
+++ b/pwm/servlet/web/WEB-INF/pwmServlet.properties
@@ -277,7 +277,7 @@ passwordSyncMaxWaitTime=90
 # Unless you are using an older version of eDirectory (pre 8.8 or before), it is generally
 # best to set this to true.
 #############################################################################################
-ldap.edirectory.enableNmas=true
+ldap.edirectory.enableNmas=false
 
 #############################################################################################
 # Always use proxy user account for ldap connections.  If true, PWM will only bind to
@@ -301,7 +301,7 @@ ldap.edirectory.alwaysUseProxy=false
 # be read.  In cases where there is a conflict between the PWM configuration and eDirectory,
 # the most restrictive policy will be used.
 #############################################################################################
-ldap.edirectory.readPasswordPolicies=true
+ldap.edirectory.readPasswordPolicies=false
 
 #*******************************************************************************************#
 #                                  Password Rules                                           #
