--- a/pwm/servlet/web/WEB-INF/pwmServlet.properties
+++ b/pwm/servlet/web/WEB-INF/pwmServlet.properties
@@ -277,7 +277,7 @@ passwordSyncMaxWaitTime=90
 # Unless you are using an older version of eDirectory (pre 8.8 or before), it is generally
 # best to set this to true.
 #############################################################################################
-ldap.edirectory.enableNmas=false
+ldap.edirectory.enableNmas=true
 
 #############################################################################################
 # Always use proxy user account for ldap connections.  If true, PWM will only bind to
@@ -301,7 +301,7 @@ ldap.edirectory.alwaysUseProxy=false
 # be read.  In cases where there is a conflict between the PWM configuration and eDirectory,
 # the most restrictive policy will be used.
 #############################################################################################
-ldap.edirectory.readPasswordPolicies=false
+ldap.edirectory.readPasswordPolicies=true
 
 #*******************************************************************************************#
 #                                  Password Rules                                           #
@@ -1053,7 +1053,7 @@ captcha.recaptcha.privateKey=
 #############################################################################################
 # Allows for skipping the captcha request if a known parameter is passed as a request
 # paramater with a key of "skipCaptcha".   This is useful for "internal" clients /
-# links where the captcha is unneccessary.
+# links where the captcha is unnecessary.
 #
 # For example, if the value is 'okay', a request to:
 #   https://pwmserver.example.com/pwm/public/ForgottenPassword?skipCaptcha=okay
