--- a/pwm/servlet/web/WEB-INF/pwmServlet.properties
+++ b/pwm/servlet/web/WEB-INF/pwmServlet.properties
@@ -158,6 +158,13 @@ logoutURL=
 forwardURL=/pwm
 
 #############################################################################################
+# Google tracking cookie.  Used for Google Analytics.  See http://www.google.com/analytics/
+#
+# If this setting is blank, this feature will be disabled.
+#############################################################################################
+google.analytics.tracker=
+
+#############################################################################################
 # Force user to logout of PWM (and send to logoutURL) after a password change.
 #
 # In most cases, this should be left on the default, true, especially if using
@@ -824,7 +831,7 @@ newUser.enable=true
 #############################################################################################
 # Context new users will be created in context.
 #############################################################################################
-newUser.createContext=ou=pwm,o=utopia
+newUser.createContext=ou=users,o=utopia
 
 #############################################################################################
 # Attributes that must be unique in the directory for the user to be created.  For example,
@@ -1020,15 +1027,15 @@ command.checkResponses.queryMatch=(objectClass=*)
 # label         - short description of the shortcut
 # description   - long description of the shortcut
 #
-# For example the setting "(cn=js*);;;http://wwww.novell.com;;;Novell" will show a link to
-# the Novell home page for users who's cn starts with 'js'.
+# For example the setting "(cn=js*);;;http://wwww.google.com;;;Google" will show a link to
+# the Google home page for users who's cn starts with 'js'.
 #
 # Settings from of 1-100 are permitted as 'shortcut.query.1, shortcut.query.2' and so on.
 #
 # Localizable.
 #############################################################################################
-shortcut.query.1=(objectClass=inetOrgPerson);;;http://www.google.com;;;Google;;;Google Search
-shortcut.query.2=(&(objectClass=inetOrgPerson)(cn=n*));;;http://www.novell.com;;;Novell;;;Novell Home Page
+shortcut.query.1=(objectClass=inetOrgPerson);;;http://www.example.com;;;Example;;;Example Page
+shortcut.query.2=(&(objectClass=inetOrgPerson)(cn=n*));;;http://www.google.com;;;Google;;;Google Home Page
 shortcut.query.3=(objectClass=inetOrgPerson);;;http://www.yahoo.com;;;Yahoo;;;Yahoo Home Page
 
 
