--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -55,8 +55,8 @@ Password_MeetsRules=New password accepted
 Password_TooSoon=Not enough time has passed since last password change
 Password_UsingDisallowedValue=New password is using a value that is not allowed
 
-Error_WrongAnswer=One or more responses are not correct
-Error_WrongPassword=The username or password is not valid
+Error_WrongAnswer=One or more responses are not correct.  Please try again.
+Error_WrongPassword=The username or password is not valid.  Please try again.
 Error_Response_WrongUsername=The username is not valid or does not have a configured response
 Error_Response_NoResponse=The username is not valid or does not have a configured response
 Error_Response_TooShort=The response for question "%field%" is too short
@@ -68,7 +68,7 @@ Error_Missing_Challenge_Text=Missing text for a user supplied question
 Error_UserAuthenticated=You are already authenticated
 Error_MissingParameter=A required parameter is missing
 Error_DirectoryUnavailable=Directory unavailable.  If this error occurs repeatedly please contact your helpdesk.
-Error_Unknown=Unknown error
+Error_Unknown=Unknown error.  If this error occurs repeatedly please contact your helpdesk.
 Error_NewUserValidationFailed=One or more values are not correct
 Error_CantMatchUser=Username not found
 Error_ServiceNotAvailable=Service is not enabled
@@ -88,6 +88,7 @@ Error_BadCaptchaResponse=Incorrect verification code, please try again.
 Error_CaptchaAPIError=An error occured while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
 Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
 Error_InvalidFormID=The FormID value of your request is missing or invalid.  Please close your browser and then try again.
+Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
 
 Error_FieldRequired=%field% is required
 Error_FieldNotANumber=%field% must be a number
@@ -97,4 +98,7 @@ Error_FieldTooLong=%field% is too long
 Error_FieldDuplicate=%field% is already used
 Error_FieldBadConfirm=%field% fields do not match
 
-
+Error_ConfigUploadSuccess=File uploaded successfully
+Error_ConfigUploadFailure=File failed to upload: %field%
+Error_ConfigFormatError=Configuration format error: %field% 
+Error_ResetSuccess=Configuration Reset
