--- a/pwm/servlet/src/password/pwm/config/Message.properties
+++ b/pwm/servlet/src/password/pwm/config/Message.properties
@@ -69,7 +69,7 @@ Requirement_ADComplexity=Must have at least three types of the following charact
 Requirement_UniqueRequired=New password may not have been used previously.
 
 Success_PasswordChange=Your password has been changed successfully.
-Success_SetupResponse=Your secret questions and answers have been successfully saved.
+Success_SetupResponse=Your secret questions and answers have been successfully saved.  If you ever forget your password, you can use the answers to these questions to reset your password.
 Success_Unknown=The operation has been successfully completed.
 Success_CreateUser=Your new user account has been successfully created.  Be sure to continue the process, or you will not be able to access your new account.
 Success_ActivateUser=Your user account has been successfully activated.  Be sure to complete the process, or you will not be able to access your account.
