--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -20,7 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-Password_MissingConfirm=Password meets requirements, please confirm
+Password_MissingConfirm=Password meets requirements, please type confirmation password
 Password_DoesNotMatch=Passwords do not match
 Password_Missing=Password missing
 Password_PreviouslyUsed=New password has been used previously
@@ -51,7 +51,7 @@ Password_LastIsNumeric=The last character must not be numeric
 Password_FirstIsSpecial=The first character must not be a symbol (non alpha-numeric) character
 Password_LastIsSpecial=The last character must not be a symbol (non alpha-numeric) character
 Password_HistoryFull=New password history is full
-Password_MeetsRules=New password accepted
+Password_MeetsRules=New password accepted, please click change password
 Password_TooSoon=Not enough time has passed since last password change
 Password_UsingDisallowedValue=New password is using a value that is not allowed
 
@@ -87,7 +87,7 @@ Error_MissingRandomResponse=One or more random responses are missing.  Please co
 Error_BadCaptchaResponse=Incorrect verification code, please try again.
 Error_CaptchaAPIError=An error occured while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
 Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
-Error_InvalidFormID=The FormID value of your request is missing or invalid.  Please close your browser and then try again.
+Error_InvalidFormID=The pwmFormID value of your request is missing or invalid.  Please close your browser and then try again.
 Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
 
 Error_FieldRequired=%field% is required
@@ -101,4 +101,6 @@ Error_FieldBadConfirm=%field% fields do not match
 Error_ConfigUploadSuccess=File uploaded successfully
 Error_ConfigUploadFailure=File failed to upload: %field%
 Error_ConfigFormatError=Configuration format error: %field% 
-Error_ResetSuccess=Configuration Reset
+Error_ConfigResetSuccess=Configuration Reset
+Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
+Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
