--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -87,8 +87,10 @@ Error_MissingRandomResponse=One or more random responses are missing.  Please co
 Error_BadCaptchaResponse=Incorrect verification code, please try again.
 Error_CaptchaAPIError=An error occured while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
 Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
-Error_InvalidFormID=The pwmFormID value of your request is missing or invalid.  Please close your browser and then try again.
+Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
 Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
+Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
+Error_TokenIncorrect=Incorrect code, please try again.
 
 Error_FieldRequired=%field% is required
 Error_FieldNotANumber=%field% must be a number
