--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -94,7 +94,7 @@ Display_RecoverChoiceReset=Set a new password.  If you have forgotten your passw
 Display_NewUser=Complete this form to create a new user account. After completing this form, you can set a new password, and your account setup will be complete. <p/> Be sure to complete the process, or your new account may not be usable.
 Display_ActivateUser=To confirm your identity, please enter the following information. Your information will be used to locate and activate your user account.<p/>Be sure to complete the process, or your account will not be activated properly.
 Display_PleaseWaitBody=Your password is being changed. This process may take several minutes, please be patient.
-Display_ErrorBody=An error has occured. Please close your browser and try again later.  If this error occurs repeatedly, please contact your help desk.
+Display_ErrorBody=An error has occurred. Please close your browser and try again later.  If this error occurs repeatedly, please contact your help desk.
 Display_UserEventHistory=This page shows your password event history. Only actions performed with PWM are shown here. All times listed are in the %1% timezone.
 Display_Logout=<b>You are now logged out.</b><p/>Please close all internet browser windows before you try to login again.  
 Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
